Added working followers count list search page

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https://i.picsum.photos/id/102/4320/3240.jpg?hmac=ico2KysoswVG8E8r550V_afIWN963F6ygTVrqHeHeRc');
+    background-image: url('https://images.unsplash.com/photo-1492895036205-f803195fba76?ixid=MXwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MTB8MTM3NjI3fHxlbnwwfHx8&ixlib=rb-1.2.1&w=1000&q=80');
     background-size: 100%;
     background-attachment: fixed;
 }
