--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,22 @@ body {
 }
 
 img {
-    width: 750px;
+    width: 550px;
     border-radius: 25px;
 }
 
 .ProfileThumbnailPic {
-    width: 375px;
-    border-radius: 5px;
+    float: left;
+    width:  300px;
+    height: 300px;
+    object-fit: cover;
 }
 
 .Header {
     border-bottom-style: solid;
+}
+
+.CommentsSpace {
+    border-top-style: inset;
+    border-radius: 20px;
 }
